--- a/examples/wx-details.handlebars
+++ b/examples/wx-details.handlebars
@@ -1,115 +1,105 @@
-<div>
-  <div class="infowin-title">Weather </div>
-  <div class="wxdata-wrapper clearfix">
-    <div class="data">
-      <div class="wxdata-loc">{{latitude}}, {{longitude}}
-        <span class="wxdata-loc-detail">near {{place.name}}, {{place.state}}</span>
-      </div>
-      <table class="wxdata-table">
-        <tbody>
-          <tr><th colspan="2">Currently</th></tr>
-          <tr>
-            <td class="wxcc-summary">
-              <div class="wx">
-                <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{obs.icon}}" alt=""></div>
-              </div>
-              <div class="temp">
-                <div class="inner">{{obs.tempF}}&#176;</div>
-              </div>
-            </td>
-            <td class="wxcc-details">
-              <ul>
-                <li class="odd">
-                  <div class="label">Feels Like</div>
-                  <div class="value">{{obs.feelslikeF}}&#176;</div>
-                </li>
-                <li class="even">
-                  <div class="label">Winds</div>
-                  <div class="value">{{obs.windDir}} {{obs.windMPH}} mph</div>
-                </li>
-                <li class="odd">
-                  <div class="label">Dew Point</div>
-                  <div class="value">{{obs.dewpointF}}&#176;</div>
-                </li>
-              </ul>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <table class="wxdata-table">
-        <tbody>
-          <tr><th colspan="3">Forecast</th></tr>
-          <tr>
-            <td class="wxfcst">
-              <div class="daydata day">{{fc1.title}}</div>
-              <div class="wxrow">
-                <div class="wx">
-                  <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{fc1.icon}}" alt="{{fc1.weather}}"></div>
-                </div>
-                <div class="temps">
-                  <div class="hitemp">
-                    <div class="label">Hi:</div>
-                    <div class="inner">{{fc1.maxTempF}}&#176;</div>
-                  </div>
-                  <div class="lotemp">
-                    <div class="label">Lo:</div>
-                    <div class="inner">{{fc1.minTempF}}&#176;</div>
-                  </div>
-                </div>
-              </div>
-              <div class="daydata pop">
-                <div class="label">POP*:</div>
-                <div class="value">{{fc1.pop}}%</div>
-              </div>
-            </td>
-            <td class="wxfcst">
-              <div class="daydata day">{{fc2.title}}</div>
-              <div class="wxrow">
-                <div class="wx">
-                  <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{fc2.icon}}" alt="{{fc2.weather}}"></div>
-                </div>
-                <div class="temps">
-                  <div class="hitemp">
-                    <div class="label">Hi:</div>
-                    <div class="inner">{{fc2.maxTempF}}&#176;</div>
-                  </div>
-                  <div class="lotemp">
-                    <div class="label">Lo:</div>
-                    <div class="inner">{{fc2.minTempF}}&#176;</div>
-                  </div>
-                </div>
-              </div>
-              <div class="daydata pop">
-                <div class="label">POP*:</div>
-                <div class="value">{{fc2.pop}}%</div>
-              </div>
-            </td>
-            <td class="wxfcst">
-              <div class="daydata day">{{fc3.title}}</div>
-              <div class="wxrow">
-                <div class="wx">
-                  <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{fc3.icon}}" alt="{{fc3.weather}}"></div>
-                </div>
-                <div class="temps">
-                  <div class="hitemp">
-                    <div class="label">Hi:</div>
-                    <div class="inner">{{fc3.maxTempF}}&#176;</div>
-                  </div>
-                  <div class="lotemp">
-                    <div class="label">Lo:</div>
-                    <div class="inner">{{fc3.minTempF}}&#176;</div>
-                  </div>
-                </div>
-              </div>
-              <div class="daydata pop">
-                <div class="label">POP*:</div>
-                <div class="value">{{fc3.pop}}%</div>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="wxdata-loc"><span class="wxdata-loc-detail">* POP = Probability Of Precip</span></div>
+<div class="aerismaps-infobox">
+  <div class="aerismaps-infobox-title">Weather </div>
+  <div class="aerismaps-infobox-body">
+    <div class="aerismaps-infobox-bold">{{latitude}}, {{longitude}}
+      <span class="aerismaps-infobox-small">near {{place.name}}, {{place.state}}</span>
     </div>
+    <table class="aerismaps-infobox-table">
+      <tbody>
+        <tr><th colspan="2">Currently</th></tr>
+        <tr>
+          <td class="aerismaps-wx-details-summary">
+            <div class="aerismaps-wx-details-summary-icon">
+              <img src="http://mesh.hamweather.net/images/wxicons/{{obs.icon}}" alt="">
+            </div>
+            <div class="aerismaps-wx-details-summary-temp">{{obs.tempF}}&#176;</div>
+          </td>
+          <td class="aerismaps-wx-details-list">
+            <ul>
+              <li>
+                <div class="aerismaps-wx-details-list-label">Feels Like</div>
+                <div class="aerismaps-wx-details-list-value">{{obs.feelslikeF}}&#176;</div>
+              </li>
+              <li>
+                <div class="aerismaps-wx-details-list-label">Winds</div>
+                <div class="aerismaps-wx-details-list-value">{{obs.windDir}} {{obs.windMPH}} mph</div>
+              </li>
+              <li>
+                <div class="aerismaps-wx-details-list-label">Dew Point</div>
+                <div class="aerismaps-wx-details-list-value">{{obs.dewpointF}}&#176;</div>
+              </li>
+            </ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table class="aerismaps-infobox-table">
+      <tbody>
+        <tr><th colspan="3">Forecast</th></tr>
+        <tr>
+          <td class="aerismaps-wx-forecast">
+            <div class="aerismaps-wx-forecast-day">{{fc1.title}}</div>
+            <div class="aerismaps-wx-forecast-icon">
+              <img src="http://mesh.hamweather.net/images/wxicons/{{fc1.icon}}" alt="{{fc1.weather}}">
+            </div>
+            <div class="aerismaps-wx-forecast-temp">
+              <div class="aerismaps-wx-forecast-hitemp">
+                <div class="aerismaps-wx-forecast-label">Hi:</div>
+                <div class="aerismaps-wx-forecast-value">{{fc1.maxTempF}}&#176;</div>
+              </div>
+              <div class="aerismaps-wx-forecast-lotemp">
+                <div class="aerismaps-wx-forecast-label">Lo:</div>
+                <div class="aerismaps-wx-forecast-value">{{fc1.minTempF}}&#176;</div>
+              </div>
+            </div>
+            <div class="aerismaps-wx-forecast-pop">
+              <div class="aerismaps-wx-forecast-label">POP*:</div>
+              <div class="aerismaps-wx-forecast-value">{{fc1.pop}}%</div>
+            </div>
+          </td>
+          <td class="aerismaps-wx-forecast">
+            <div class="aerismaps-wx-forecast-day">{{fc2.title}}</div>
+            <div class="aerismaps-wx-forecast-icon">
+              <img src="http://mesh.hamweather.net/images/wxicons/{{fc2.icon}}" alt="{{fc2.weather}}">
+            </div>
+            <div class="aerismaps-wx-forecast-temp">
+              <div class="aerismaps-wx-forecast-hitemp">
+                <div class="aerismaps-wx-forecast-label">Hi:</div>
+                <div class="aerismaps-wx-forecast-value">{{fc2.maxTempF}}&#176;</div>
+              </div>
+              <div class="aerismaps-wx-forecast-lotemp">
+                <div class="aerismaps-wx-forecast-label">Lo:</div>
+                <div class="aerismaps-wx-forecast-value">{{fc2.minTempF}}&#176;</div>
+              </div>
+            </div>
+            <div class="aerismaps-wx-forecast-pop">
+              <div class="aerismaps-wx-forecast-label">POP*:</div>
+              <div class="aerismaps-wx-forecast-value">{{fc2.pop}}%</div>
+            </div>
+          </td>
+          <td class="aerismaps-wx-forecast">
+            <div class="aerismaps-wx-forecast-day">{{fc3.title}}</div>
+            <div class="aerismaps-wx-forecast-icon">
+              <img src="http://mesh.hamweather.net/images/wxicons/{{fc3.icon}}" alt="{{fc3.weather}}">
+            </div>
+            <div class="aerismaps-wx-forecast-temp">
+              <div class="aerismaps-wx-forecast-hitemp">
+                <div class="aerismaps-wx-forecast-label">Hi:</div>
+                <div class="aerismaps-wx-forecast-value">{{fc3.maxTempF}}&#176;</div>
+              </div>
+              <div class="aerismaps-wx-forecast-lotemp">
+                <div class="aerismaps-wx-forecast-label">Lo:</div>
+                <div class="aerismaps-wx-forecast-value">{{fc3.minTempF}}&#176;</div>
+              </div>
+            </div>
+            <div class="aerismaps-wx-forecast-pop">
+              <div class="aerismaps-wx-forecast-label">POP*:</div>
+              <div class="aerismaps-wx-forecast-value">{{fc3.pop}}%</div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <div class="aerismaps-infobox-bold"><span class="aerismaps-infobox-small">* POP = Probability Of Precip</span></div>
   </div>
 </div>
