--- a/examples/css/example.css
+++ b/examples/css/example.css
@@ -1,36 +1,58 @@
-#map-canvas {
-  width: 800px;
-  height: 600px;
-}
-
-.loading {
-  display: none;
-
-  position: absolute;
-  top:0; left: 0;
-  z-index: 9999;
-
-  text-align: center;
+html, body {
   width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 
+  font-family: sans-serif;
 }
-.loading-content {
-  width:150px;
-  margin:20% auto;
 
-  padding: 20px;
-  text-align: center;
-
-  background: rgba(255, 255, 255, .65);
-
-  -webkit-box-shadow: 0 0 9999px 9999px rgba(0, 0, 0, 0.7);
-  -moz-box-shadow: 0 0 9999px 9999px rgba(0, 0, 0, 0.7);
-  box-shadow: 0 0 9999px 9999px rgba(0, 0, 0, 0.7);
-
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  border-radius: 15px;
+#map-canvas {
+  width: 100%;
+  height: 100%;
 }
+
+#loading {
+  display: none;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-family: sans-serif;
+  background: rgba(255, 255, 255, 0.95);
+  padding: 10px;
+  box-shadow: 1px 1px 0 0 rgba(0,0,0,0.5);
+}
+
+.prompt {
+  position: absolute;
+  left: 10px;
+  width: 600px;
+  background: #fff;
+  padding: 10px;
+  bottom: 10px;
+  box-shadow: 0 0 7px 0 rgba(0,0,0,0.25);
+}
+  .prompt h1 {
+    margin: 5px 0;
+    font-size: 25px;
+    font-weight: normal;
+  }
+  .prompt h2 {
+    margin: 5px 0;
+    font-weight: normal;
+    font-size: 16px;
+    font-style: italic;
+  }
+  .prompt p {
+    font-size: 14px;
+    line-height: 1.5em;
+  }
+  .prompt code {
+    background: #f4f4f4;
+  }
+  .prompt small {
+    font-style: italic;
+  }
 
 .float-left {
 	float: left;
