--- a/examples/css/example.css
+++ b/examples/css/example.css
@@ -12,6 +12,19 @@ html, body {
   height: 100%;
 }
 
+.controls {
+  position: absolute;
+  top: 50px;
+  right: 20px;
+  padding: 10px;
+  background: rgba(255,255,255, 0.95);
+  box-shadow: 0 0 5px rgba(0,0,0,0.25);
+}
+  .controls button {
+    font-size: 20px;
+    padding: 10px 15px;
+  }
+
 #loading {
   display: none;
   position: absolute;
