--- a/docs/themes/public/layouts/main.handlebars
+++ b/docs/themes/public/layouts/main.handlebars
@@ -11,7 +11,7 @@
   <script type="text/javascript" src="themes/public/js/tooltipster/jquery.tooltipster.min.js"></script>
 </head>
 <body>
-
+{{!--
 <div id="page">
   <div id="super-header">
     <form id="weatherSearch" action="#">
@@ -149,7 +149,7 @@
     contentAsHTML: true
   });
 
-</script>
-{{{logPublicApi aeris}}}
+</script> --}}
+{{{log this}}}
 </body>
 </html>
