--- a/docs/themes/public/partials/toc.handlebars
+++ b/docs/themes/public/partials/toc.handlebars
@@ -1,22 +1,19 @@
-{{#eachPublicNamespace aeris}}
+{{#each namespaces}}
   <a class="tocTitle" href="#ns-{{name}}">{{shortName}}</a>
   <ul class="tocSection">
-    {{#each namespaces}}
+    {{#each namespaces }}
       {{>toc-classes this}}
     {{/each}}
+
     {{#each classes}}
-      {{#ifPublicApi this }}
-        <li><a href="#{{name}}">{{className this}}</a></li>
-      {{/ifPublicApi}}
+      <li><a href="#{{name}}">{{className this}}</a></li>
     {{/each}}
   </ul>
-{{/eachPublicNamespace}}
+{{/each}}
 
 <a class="tocTitle" href="#ns-util">Util</a>
 <ul class="tocSection">
-  {{#each aeris.classes}}
-    {{#ifPublicApi this}}
-      <li><a href="#{{name}}">{{className this}}</a></li>
-    {{/ifPublicApi}}
+  {{#each classes}}
+    <li><a href="#{{name}}">{{className this}}</a></li>
   {{/each}}
 </ul>
