--- a/docs/themes/public/partials/class.handlebars
+++ b/docs/themes/public/partials/class.handlebars
@@ -1,1 +1,16 @@
 <h4 id="{{name}}">{{className this}}</h4>
+
+<ul class="classDocs">
+  <li>
+    {{#linkTo this }}{{name}}{{/linkTo}}
+  </li>
+  {{#if parent}}
+    <li>
+      extends {{#linkTo parent}}{{parent.name}}{{/linkTo}}
+    </li>
+  {{/if}}
+</ul>
+
+{{#if description }}
+  <p>{{{parseForTypes description}}}</p>
+{{/if}}
