--- a/docs/themes/public/partials/toc-classes.handlebars
+++ b/docs/themes/public/partials/toc-classes.handlebars
@@ -3,7 +3,7 @@
       <summary><a href="#{{name}}">{{shortName}}</a></summary>
       <ul class="tocSection">
         {{#each classes}}
-          <li><a href="#{{name}}">{{className this}}</a></li>
+          <li><a href="#{{name}}">{{shortName this}}</a></li>
         {{/each}}
         {{#each namespaces}}
           {{! Recursively render child namespaces }}
