--- a/docs/themes/public/partials/toc.handlebars
+++ b/docs/themes/public/partials/toc.handlebars
@@ -6,7 +6,7 @@
     {{/each}}
 
     {{#each classes}}
-      <li><a href="#{{name}}">{{className this}}</a></li>
+      <li><a href="#{{name}}">{{shortName this}}</a></li>
     {{/each}}
   </ul>
 {{/each}}
@@ -14,6 +14,6 @@
 <a class="tocTitle" href="#ns-util">Util</a>
 <ul class="tocSection">
   {{#each classes}}
-    <li><a href="#{{name}}">{{className this}}</a></li>
+    <li><a href="#{{name}}">{{shortName this}}</a></li>
   {{/each}}
 </ul>
