Docs: Add missing external links

--- a/docs/themes/public/layouts/main.handlebars
+++ b/docs/themes/public/layouts/main.handlebars
@@ -23,10 +23,10 @@
       <input type="search" placeholder="Local weather"/>
     </form>
     <ul>
-      <li><a href="#">HamWeather.com</a></li>
-      <li><a href="#">Developer Center</a></li>
-      <li><a href="#">Support</a></li>
-      <li><a href="#">Blog</a></li>
+      <li><a href="http://www.hamweather.com/" target="_blank">HamWeather.com</a></li>
+      <li><a href="http://developer.hamweather.com/" target="_blank">Developer Center</a></li>
+      <li><a href="http://support.hamweather.com/" target="_blank">Support</a></li>
+      <li><a href="http://labs.hamweather.com/" target="_blank">Blog</a></li>
     </ul>
   </div>
 
@@ -40,6 +40,7 @@
     <a class="tocTitle" href="#Introduction">Introduction</a>
     <ul class="tocSection">
       <li><a href="#Downloads">Downloads</a></li>
+      <li><a href="#Getting-Started">Getting Started</a></li>
       <li><a href="#Get-An-API-Key">Get an API key</a></li>
     </ul>
 
@@ -68,7 +69,7 @@
 <footer>
   <nav>
     <ul>
-      <li><a href="#">Products</a></li>
+      <li><a href="http://www.hamweather.com/products" target="_blank">Products</a></li>
     </ul>
   </nav>
 
