--- a/docs/themes/public/partials/toc-classes.handlebars
+++ b/docs/themes/public/partials/toc-classes.handlebars
@@ -1,6 +1,6 @@
   <li class="category">
     <details>
-      <summary><a href="#{{name}}">{{shortName}}</a></summary>
+      <summary><a href="#{{name}}">{{shortName name}}</a></summary>
       <ul class="tocSection">
         {{#each classes}}
           <li><a href="#{{name}}">{{shortName this}}</a></li>
