--- a/docs/themes/public/scss/style.scss
+++ b/docs/themes/public/scss/style.scss
@@ -18,8 +18,11 @@
 @import "partial/form/textinput";
 @import "partial/form/searchinput";
 @import "partial/view/sidebar";
+@import "partial/view/forkme";
 @import "partial/view/logo";
 @import "partial/view/docs";
 @import "partial/view/tooltipster";
 @import "partial/table";
 @import "partial/view/footer/footer";
+@import "partial/view/downloads";
+@import "partial/view/intro";
