--- a/docs/themes/public/layouts/main.handlebars
+++ b/docs/themes/public/layouts/main.handlebars
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+<!-- Fork me on github -->
+<div class="forkMe">
+  <a href="{{githubUrl}}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+</div>
+
 <div id="page">
   <div id="super-header">
     <form id="weatherSearch" action="#">
@@ -26,16 +31,16 @@
   </div>
 
   <div id="sidebar">
-    <a class="tocTitle" href="#">Aeris.js (v0.1.0)</a>
+    <a class="tocTitle" href="#">Aeris.js ({{project.version}})</a>
     <ul class="tocSection">
-      <li><a href="#">Github Repo</a></li>
-      <li><a href="#">Aeris Weather API</a></li>
+      <li><a href="{{project.githubUrl}}"  target="_blank">Github Repo</a></li>
+      <li><a href="{{project.aerisApiUrl}}"  target="_blank">Aeris Weather API</a></li>
     </ul>
 
-    <a class="tocTitle" href="#">Introduction</a>
+    <a class="tocTitle" href="#Introduction">Introduction</a>
     <ul class="tocSection">
-      <li><a href="#">Getting Started</a></li>
-      <li><a href="#">Get an API key</a></li>
+      <li><a href="#Downloads">Downloads</a></li>
+      <li><a href="#Get-An-API-Key">Get an API key</a></li>
     </ul>
 
     {{>toc publicApi.namespaces.aeris}}
@@ -44,26 +49,9 @@
 
   <div class="container">
 
-    <a href="#"><img id="logo" src="themes/public/images/aeris_logo.png" alt="Aeris.js"/></a>
+    {{>intro project }}
 
-    <h1>Aeris.js</h1>
 
-    <p>
-      The <a href="http://www.hamweather.com/support/documentation/aeris" target="_blank">Aeris Weather API</a> is one of the most complete and advanced weather APIs available and quickly gives you access to many different types of weather information.
-    </p>
-
-    <p>
-
-      Out of the box, Aeris Interactive provides a suite of tools for rendering weather maps and widgets, using data from the Aeris API. Maps can be rendered using the [<a href="https://developers.google.com/maps/" target="_blank">Google Maps API</a> or <a href="http://openlayers.org/" target="_blank">OpenLayers</a>.
-    </p>
-
-    <p>
-      Usage of the Aeris API requires an Aeris API developer account. Visit <a href="http://www.hamweather.com/products/aeris-api/pricing/" target="_blank">hamweather.com</a> to sign up for a free account.
-    </p>
-
-    <p>
-      <a class="btn" href="#">Download Aeris.js</a>
-    </p>
 
     {{#each publicApi.namespaces.aeris.namespaces}}
       {{>classdocs this}}
@@ -123,6 +111,11 @@
 
   stickyScroll($('#sidebar'), $('#super-header').height(), $('footer').outerHeight());
 
+  // Fork Me
+  stickyScroll($('.forkMe img'), $('#super-header').height(), $('footer').outerHeight());
+  // So we don't need to customize the widget code
+  $('.forkMe a').attr('target', '_blank');
+
 
   function goToWeather(place) {
     window.location = 'http://wx.hamweather.com/?pands=' + 55417;
@@ -151,5 +144,6 @@
 
 </script>
 {{{log publicApi}}}
+{{{log project}}}
 </body>
 </html>
