Docs style updates

--- a/docs/themes/public/scss/base/form/_button.scss
+++ b/docs/themes/public/scss/base/form/_button.scss
@@ -35,6 +35,7 @@
   @extend %btn;
   color: white;
   background: $highlight;
+  @include box-shadow(0 0 0px 1px rgba(0, 0, 0, 0.35) inset);
 
   cursor: pointer;
 
