--- a/docs/themes/public/scss/partial/_typography.scss
+++ b/docs/themes/public/scss/partial/_typography.scss
@@ -16,22 +16,27 @@ body {
       font-size: 40px;
       line-height: 1.5em;
       margin: 0;
-      padding-top: 20px;
+      margin-top: 20px;
     }
 
     h2 {
-      font-size: 36px;
-      padding-top: 40px;
+      font-size: 48px;
+      margin-top: 100px;
+
+      // Prevent double-padding on adjacent headings
+      & + h3, & + h4, & + span + h3, & + span + h4 {
+        margin-top: 10px;
+      }
     }
 
     h3 {
       font-size: 32px;
-      padding-top: 40px;
+      margin-top: 150px;
     }
 
     h4 {
-      font-size: 24px;
-      padding-top: 60px;
+      font-size: 36px;
+      margin-top: 150px;
     }
 
     h5 {
