--- a/docs/themes/public/partials/toc.handlebars
+++ b/docs/themes/public/partials/toc.handlebars
@@ -1,5 +1,5 @@
 {{#each namespaces}}
-  <a class="tocTitle" href="#ns-{{name}}">{{shortName name}}</a>
+  <a class="tocTitle" href="#{{name}}">{{shortName name}}</a>
   <ul class="tocSection">
     {{#each namespaces }}
       {{>toc-classes this}}
