--- a/docs/themes/public/partials/class.handlebars
+++ b/docs/themes/public/partials/class.handlebars
@@ -1,4 +1,4 @@
-<h4 id="{{name}}">{{shortName this}}</h4>
+<h4 id="{{name}}" class="classTitle"><small>{{namespace}}.</small>{{shortName this}}</h4>
 
 <ul class="classDocs">
   <li>
@@ -17,9 +17,7 @@
 </ul>
 
 {{#if description }}
-  {{#eachTypeInText description }}
-    {{>typelink this}}
-  {{/eachTypeInText}}
+  {{>eachtypeintext description}}
 {{/if}}
 
 
@@ -46,11 +44,11 @@
   </table>
 {{/if}}
 
-{{#if methods.length}}
+{{#if methods}}
 
   <h5 id="{{name}}-methods">methods</h5>
 
-  <table>
+  <table class="methods">
     <thead>
     <tr>
       <td>Method</td>
@@ -71,7 +69,12 @@
           {{/if}}
         </td>
         <td>
-          {{description}}
+          {{#if description}}
+            {{>eachtypeintext description}}
+          {{/if}}
+          {{#if return.description}}
+            Returns: {{>eachtypeintext return.description}}
+          {{/if}}
         </td>
       </tr>
     {{/each}}
