Docs: minor style changes

--- a/docs/themes/public/partials/class.handlebars
+++ b/docs/themes/public/partials/class.handlebars
@@ -70,7 +70,7 @@
         </td>
         <td>
           {{#if description}}
-            {{>eachtypeintext description}}
+            <pre>{{>eachtypeintext description}}</pre>
           {{/if}}
           {{#if return.description}}
             Returns: {{>eachtypeintext return.description}}
