--- a/docs/themes/public/partials/intro.handlebars
+++ b/docs/themes/public/partials/intro.handlebars
@@ -147,7 +147,7 @@ earthquakeMarkers.fetchData();
   <h2 id="Get-An-API-Key">Get an API Key</h2>
 
   <p>
-    The Aeris Weather API requires an API key
+    The Aeris Weather API requires an API key. You can get a free developer key at <a href="http://www.hamweather.com/products/aeris-api/pricing/" target="_blank">hamweather.com</a>.
   </p>
 
 </div>
