--- a/docs/themes/public/partials/intro.handlebars
+++ b/docs/themes/public/partials/intro.handlebars
@@ -1,5 +1,5 @@
 <div id="Introduction">
-  <a href="#"><img id="logo" src="themes/public/images/aeris_logo.png" alt="Aeris.js"/></a>
+  <a href="#"><img id="logo" src="{{themeRoot}}/images/aeris_logo.png" alt="Aeris.js"/></a>
 
   <p>
     The <a href="http://www.hamweather.com/support/documentation/aeris" target="_blank">Aeris Weather API</a> is one of
