Register public theme partials with API theme docs

--- a/docs/themes/api/layouts/main.handlebars
+++ b/docs/themes/api/layouts/main.handlebars
@@ -12,6 +12,8 @@
 </head>
 <body class="yui3-skin-sam">
 
+{{>public/header}}
+
 <a href="https://github.com/hamweather/aeris-interactive" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
 <div id="doc">
