--- a/docs/themes/public/layouts/main.handlebars
+++ b/docs/themes/public/layouts/main.handlebars
@@ -13,10 +13,7 @@
 </head>
 <body>
 
-<!-- Fork me on github -->
-<div class="forkMe">
-  <a href="{{githubUrl}}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-</div>
+{{>forkme}}
 
 <div id="page">
 
@@ -44,9 +41,5 @@
 
 {{>footer}}
 
-
-<script type="text/javascript">
-
-</script>
 </body>
 </html>
