--- a/docs/themes/public/scss/partial/form/_searchinput.scss
+++ b/docs/themes/public/scss/partial/form/_searchinput.scss
@@ -3,6 +3,7 @@ input[type=search] {
   background: #272727 image-url('search.png') no-repeat 8px;
   text-indent: 30px;
   padding: 5px;
+  min-width: 150px;
 
   cursor: pointer;
 
