--- a/docs/themes/api/layouts/main.handlebars
+++ b/docs/themes/api/layouts/main.handlebars
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" class="yui-overrride">
 <head>
-    <meta charset="utf-8">
-    <title>{{htmlTitle}}</title>
-    <link rel="stylesheet" href="{{yuiGridsUrl}}">
-    <link rel="stylesheet" href="{{projectAssets}}/vendor/prettify/prettify-min.css">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/png" href="/docs/themes/public/images/aeris-favicon.png">
-    <script src="{{yuiSeedUrl}}"></script>
-    <link rel="stylesheet" href="/docs/themes/api/assets/css/style.css" id="site_styles">
+  <meta charset="utf-8">
+  <title>{{htmlTitle}}</title>
+  <link rel="stylesheet" href="{{yuiGridsUrl}}">
+  <link rel="stylesheet" href="{{projectAssets}}/vendor/prettify/prettify-min.css">
+  <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" type="image/png" href="/docs/themes/public/images/aeris-favicon.png">
+  <script src="{{yuiSeedUrl}}"></script>
+  <link rel="stylesheet" href="/docs/themes/api/assets/css/style.css" id="site_styles">
 </head>
 <body class="yui3-skin-sam">
 
-{{>public/header}}
 
-<a href="https://github.com/hamweather/aeris-interactive" target="_blank"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+{{>forkme}}
 
-<div id="doc">
-    <div id="hd" class="yui3-g header">
-        <div class="yui3-u-3-4">
-            <h1 class="blue-main-title">{{projectName}}</h1>
-        </div>
-        <div class="yui3-u-1-4 version project-version">
-            API Docs for: {{projectVersion}}
-        </div>
-    </div>
+<div id="page">
+  {{>public/header}}
+
+  <div id="doc">
     <div id="bd" class="yui3-g">
 
-        <div class="yui3-u-1-4">
-            <div id="docs-sidebar" class="sidebar apidocs">
-                {{>sidebar}}
-            </div>
+      <div class="yui3-u-1-4">
+        <div id="docs-sidebar" class="sidebar apidocs">
+          {{>sidebar}}
         </div>
-        <div class="yui3-u-3-4">
-            {{>options}}
-            <div class="apidocs">
-                <div id="docs-main">
-                    <div class="content">
-                        {{>layout_content}}
-                    </div>
-                </div>
+      </div>
+      <div class="yui3-u-3-4">
+        {{>options}}
+        <div class="apidocs">
+          <div id="docs-main">
+            <div class="content">
+              {{>layout_content}}
             </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
+
+{{>public/footer}}
+
+
 <script src="{{projectAssets}}/vendor/prettify/prettify-min.js"></script>
 <script>prettyPrint();</script>
 <script src="{{projectAssets}}/js/yui-prettify.js"></script>
@@ -52,5 +51,11 @@
 <script src="{{projectAssets}}/js/api-list.js"></script>
 <script src="{{projectAssets}}/js/api-search.js"></script>
 <script src="{{projectAssets}}/js/apidocs.js"></script>
+
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script type="text/javascript" src="/docs/themes/public/js/tooltipster/jquery.tooltipster.min.js"></script>
+<script type="text/javascript" src="/docs/themes/public/js/page.js"></script>
+
+
 </body>
 </html>
