Docs: Pull out code scss

--- a/docs/themes/public/scss/style.scss
+++ b/docs/themes/public/scss/style.scss
@@ -10,6 +10,7 @@
 
 @import "partial/normalize";
 @import "partial/typography";
+@import "partial/code";
 @import "partial/layout";
 
 @import "partial/view/body";
