--- a/docs/themes/public/partials/sidebar.handlebars
+++ b/docs/themes/public/partials/sidebar.handlebars
@@ -1,8 +1,8 @@
 <div id="sidebar">
   <a class="tocTitle" href="#">Aeris.js ({{project.version}})</a>
   <ul class="tocSection">
-    <li><a href="{{project.githubUrl}}"  target="_blank">Github Repo</a></li>
-    <li><a href="{{project.aerisApiUrl}}"  target="_blank">Aeris Weather API</a></li>
+    <li><a href="{{projectConfig.githubUrl}}"  target="_blank">Github Repo</a></li>
+    <li><a href="{{projectConfig.aerisApiUrl}}"  target="_blank">Aeris Weather API</a></li>
   </ul>
 
   <a class="tocTitle" href="#Introduction">Introduction</a>
