Docs: Move common assets into docs/assets

--- a/docs/themes/api/scss/api.scss
+++ b/docs/themes/api/scss/api.scss
@@ -1,5 +1,9 @@
 @import "compass";
 
+// NOTE: The api theme compass project is configured
+// to be able to import styles from the
+// public theme.
+
 // Original blue theme styles
 @import "blue";
 
