--- a/docs/themes/api/layouts/main.handlebars
+++ b/docs/themes/api/layouts/main.handlebars
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <title>{{htmlTitle}}</title>
   <link rel="stylesheet" href="{{yuiGridsUrl}}">
-  <link rel="stylesheet" href="{{projectAssets}}/vendor/prettify/prettify-min.css">
+  <link rel="stylesheet" href="{{projectConfig.assetPath}}/js/api/vendor/prettify/prettify-min.css">
   <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700' rel='stylesheet' type='text/css'>
-  <link rel="shortcut icon" type="image/png" href="/docs/themes/public/images/aeris-favicon.png">
+  <link rel="shortcut icon" type="image/png" href="{{projectConfig.assetPath}}/images/aeris-favicon.png">
   <script src="{{yuiSeedUrl}}"></script>
-  <link rel="stylesheet" href="/docs/themes/api/assets/css/style.css" id="site_styles">
+  <link rel="stylesheet" href="{{projectConfig.assetPath}}/css/api.css" id="site_styles">
 </head>
 <body class="yui3-skin-sam">
 
@@ -43,18 +43,18 @@
 {{>public/footer}}
 
 
-<script src="{{projectAssets}}/vendor/prettify/prettify-min.js"></script>
+<script src="{{projectConfig.assetPath}}/js/api/vendor/prettify/prettify-min.js"></script>
 <script>prettyPrint();</script>
-<script src="{{projectAssets}}/js/yui-prettify.js"></script>
-<script src="{{projectAssets}}/../api.js"></script>
-<script src="{{projectAssets}}/js/api-filter.js"></script>
-<script src="{{projectAssets}}/js/api-list.js"></script>
-<script src="{{projectAssets}}/js/api-search.js"></script>
-<script src="{{projectAssets}}/js/apidocs.js"></script>
+<script src="{{projectConfig.assetPath}}/js/api/yui-prettify.js"></script>
+<script src="{{projectConfig.assetPath}}/js/api/api-filter.js"></script>
+<script src="{{projectConfig.assetPath}}/js/api/api-list.js"></script>
+<script src="{{projectConfig.assetPath}}/js/api/api-search.js"></script>
+<script src="{{projectConfig.assetPath}}/js/api/apidocs.js"></script>
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script type="text/javascript" src="/docs/themes/public/js/tooltipster/jquery.tooltipster.min.js"></script>
-<script type="text/javascript" src="/docs/themes/public/js/page.js"></script>
+<script type="text/javascript" src="{{projectConfig.assetPath}}/js/jquery.details.min.js"></script>
+<script type="text/javascript" src="{{projectConfig.assetPath}}/js/tooltipster/jquery.tooltipster.min.js"></script>
+<script type="text/javascript" src="{{projectConfig.assetPath}}/js/page.js"></script>
 
 
 </body>
