HTML5 details polyfilll

--- a/docs/themes/public/layouts/main.handlebars
+++ b/docs/themes/public/layouts/main.handlebars
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{{projectConfig.assetPath}}/js/tooltipster/tooltipster.css"/>
 
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script type="text/javascript" src="{{projectConfig.assetPath}}/js/jquery.details.min.js"></script>
   <script type="text/javascript" src="{{projectConfig.assetPath}}/js/tooltipster/jquery.tooltipster.min.js"></script>
   <script type="text/javascript" src="{{projectConfig.assetPath}}/js/page.js"></script>
 </head>
