Default sidebar for aeris ns to be open

--- a/docs/themes/api/partials/namespacetree.handlebars
+++ b/docs/themes/api/partials/namespacetree.handlebars
@@ -1,5 +1,5 @@
 <li>
-  <details>
+  <details {{#ifEquals name 'aeris'}}open{{/ifEquals}}>
     <summary>{{shortName name}}</summary>
     {{#if namespaces}}
       <ul>
