--- a/docs/themes/public/partials/typelink.handlebars
+++ b/docs/themes/public/partials/typelink.handlebars
@@ -1,4 +1,4 @@
-<a href="{{link}}" class="ref"
+<a href="{{link}}" class="ref{{#if ../description}} description{{/if}}"
     {{#if isNative}}
     target="_blank"
     >{{name}}</a>
