--- a/docs/themes/public/scss/partial/view/_docs.scss
+++ b/docs/themes/public/scss/partial/view/_docs.scss
@@ -15,6 +15,10 @@ a.ref {
   &:hover {
     background: #eaebf8;
   }
+
+  &.description {
+    border-bottom: 2px dotted $highlightDark;
+  }
 }
 
 .typeDocs {
