Naming: Remove 'Aeris' prefix from layers

--- a/docs/themes/public/partials/intro.handlebars
+++ b/docs/themes/public/partials/intro.handlebars
@@ -112,7 +112,7 @@
     <pre>
 // Create your map and map overlay objects
 var map = new <a href="#aeris.maps.Map" class="ref">aeris.maps.Map</a>('map-canvas');
-var radar = new <a href="#aeris.maps.layers.AerisRadar" class="ref">aeris.maps.layers.AerisRadar</a>();
+var radar = new <a href="#aeris.maps.layers.Radar" class="ref">aeris.maps.layers.Radar</a>();
 var earthquakeMarkers = new <a href="#aeris.maps.markercollections.EarthquakeMarkers" class="ref">aeris.maps.markercollections.EarthquakeMarkers()</a>
 
 // Configure your <a href="#Get-An-API-Key">API Keys</a>
